<!-- 
 - Copyright 1999-2011 Alibaba Group.
 -  
 - Licensed under the Apache License, Version 2.0 (the "License");
 - you may not use this file except in compliance with the License.
 - You may obtain a copy of the License at
 -  
 -      http://www.apache.org/licenses/LICENSE-2.0
 -  
 - Unless required by applicable law or agreed to in writing, software
 - distributed under the License is distributed on an "AS IS" BASIS,
 - WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 - See the License for the specific language governing permissions and
 - limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.dvt</groupId>
	<artifactId>dubbo-snjs</artifactId>
	<version>0.0.1</version>
	<packaging>pom</packaging>
	<name>${project.artifactId}</name>
	<properties>
		<spring_version>4.2.4.RELEASE</spring_version>
		<dubbo.version>2.5.3</dubbo.version>
		<javassist_version>3.15.0-GA</javassist_version>
		<netty_version>3.2.5.Final</netty_version>
		<mina_version>1.1.7</mina_version>
		<grizzly_version>2.1.4</grizzly_version>
		<httpclient_version>4.1.2</httpclient_version>
		<hessian_lite_version>3.2.1-fixed-2</hessian_lite_version>
		<xstream_version>1.4.1</xstream_version>
		<fastjson_version>1.1.8</fastjson_version>
		<bsf_version>3.1</bsf_version>
		<sorcerer_version>0.8</sorcerer_version>
		<zookeeper_version>3.3.3</zookeeper_version>
		<zkclient_version>0.10</zkclient_version>
		<curator_version>1.1.16</curator_version>
		<jedis_version>2.1.0</jedis_version>
		<xmemcached_version>1.3.6</xmemcached_version>
		<cxf_version>2.6.1</cxf_version>
		<thrift_version>0.8.0</thrift_version>
		<jfreechart_version>1.0.13</jfreechart_version>
		<hessian_version>4.0.7</hessian_version>
		<servlet_version>2.5</servlet_version>
		<jetty_version>6.1.26</jetty_version>
		<validation_version>1.0.0.GA</validation_version>
		<hibernate_validator_version>4.2.0.Final</hibernate_validator_version>
		<jcache_version>0.4</jcache_version>
		<sca_version>2.0-M5.1</sca_version>
		<guice_version>3.0</guice_version>
		<cglib_version>2.2</cglib_version>
		<webx_version>3.0.8</webx_version>
		<!-- Log libs -->
		<slf4j_version>1.6.2</slf4j_version>
		<jcl_version>1.1</jcl_version>
		<log4j_version>1.2.16</log4j_version>
		<logback_version>1.0.6</logback_version>
		<!-- Test libs -->
		<junit_version>4.10</junit_version>
		<easymock_version>3.0</easymock_version>
		<jmockit_version>0.999.8</jmockit_version>
		<!-- Build args -->
		<!--<argline>-server -Xms64m -Xmx64m -XX:PermSize=64m -XX:MaxPermSize=64m</argline>-->
		<skip_maven_deploy>false</skip_maven_deploy>
		<updateReleaseInfo>true</updateReleaseInfo>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<jdk.version>1.8</jdk.version>
        <!-- generate idea copyright -->
        <copyright>Copyright 1999-2012 Alibaba Group.&#10; &#10;Licensed under the Apache License, Version 2.0 (the &quot;License&quot;);&#10;you may not use this file except in compliance with the License.&#10;You may obtain a copy of the License at&#10; &#10;     http://www.apache.org/licenses/LICENSE-2.0&#10; &#10;Unless required by applicable law or agreed to in writing, software&#10;distributed under the License is distributed on an &quot;AS IS&quot; BASIS,&#10;WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.&#10;See the License for the specific language governing permissions and&#10;limitations under the License.</copyright>
        <profile.name>oss</profile.name>
	</properties>
	<modules>
		<module>dubbo-snjs-api</module>
		<module>dubbo-snjs-consumer</module>
		<module>dubbo-snjs-provider</module>
	</modules>
	
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>dubbo</artifactId>
				<version>${dubbo.version}</version>
				<exclusions>  
					<exclusion>  
						<groupId>org.springframework</groupId>  
						<artifactId>spring</artifactId>  
					</exclusion>  
				</exclusions> 
			</dependency>
			<!-- Common libs -->
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>${spring_version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-jdbc</artifactId>
				<version>${spring_version}</version>
			</dependency>
			<dependency>
				<groupId>proxool</groupId>
				<artifactId>proxool</artifactId>
				<version>0.9.1</version>
			</dependency>
			<dependency>
				<groupId>proxool</groupId>
				<artifactId>proxool-cglib</artifactId>
				<version>0.9.1</version>
			</dependency>
			<dependency>
				<groupId>com.101tec</groupId>
				<artifactId>zkclient</artifactId>
				<version>${zkclient_version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.5.1</version>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
					<showWarnings>true</showWarnings>
				</configuration>
			</plugin>
		</plugins>
	</build>
			
</project>
